--- a/style.css
+++ b/style.css
@@ -1,19 +1,6 @@
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 3px;
+body {
+	font-family: 'Helvetica', sans-serif;
 }
+h1 {
 
-.node text {
-  font: 12px sans-serif;
-}
-
-.node:hover {
-	cursor: pointer;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 2px;
 }
