--- a/style.css
+++ b/style.css
@@ -2,10 +2,19 @@ body {
 	font-family: 'Helvetica', sans-serif;
 	/*background-color: #542988; */
 }
-h1 {
 
+#container {
+	margin-left: 25px;
 }
 
+h1 {
+	margin-bottom: 10px;
+}
+
+p {
+	margin-top: 0px;
+	margin-bottom: 10px;
+}
 p a {
 	color: #03A9F4;
 }
